# ranking_review

./: .gitignore
review-ranking-no-llm/: .gitignore  IMAGE_SIMILARITY_MAP.md  README.md  WEIGHTS.md  pyproject.toml
review-ranking-no-llm/app/: config.py  main.py
review-ranking-no-llm/app/examples/: image_similarity_example.py
review-ranking-no-llm/app/models/: clip_score_cache.py  image_similarity.py  review.py
review-ranking-no-llm/app/services/: clip_client.py  db_client.py  heuristic_scoring.py  image_quality.py  image_similarity_loader.py  run_logger.py
