[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "review-ranking-no-llm"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0.0",
    "opencv-python-headless>=4.9.0",
    "requests>=2.31.0",
    "psycopg2-binary>=2.9.9",
    "transformers>=4.40.0",
    "torch>=2.2.0",
    "Pillow>=10.0.0",
]

[project.scripts]
rank-reviews = "app.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
